The my_hello_world.cc program runs through several writing and reading cases. We have tested with 120 objects that are 8 MB each to get about 1 GB of data written or read. We can dispatch all of the operations and then wait for the IO to finish, i.e. these can be done in parallel.
Next we will try to overlap the erasure coding with the writing and
reading.

--- a/examples/librados/Makefile
+++ b/examples/librados/Makefile
@@ -1,7 +1,7 @@
-CXXFLAGS=-std=c++0x -I../../src/include
+CXXFLAGS=-std=c++11 -I../../src/include  -I../../src
 CFLAGS=-I../../src/include
 LDFLAGS=-lrados -lradosstriper
-all: librados_hello_world librados_hello_world_c my_radosstriper
+all: librados_hello_world librados_hello_world_c my_radosstriper librados_my_hello_world
 
 librados_hello_world: hello_world.cc
 	g++ -g -c hello_world.cc -o hello_world.o $(CXXFLAGS)
@@ -19,8 +19,13 @@ my_radosstriper_aio: my_hello_radosstriper_aio.cc
 	g++ -g -c my_hello_radosstriper_aio.cc -o my_hello_radosstriper_aio.o $(CXXFLAGS)
 	g++ -g my_hello_radosstriper_aio.o   -o my_hello_radosstriper_aio $(LDFLAGS)
 
+librados_my_hello_world: my_hello_world.cc
+	g++ -g -c my_hello_world.cc -o my_hello_world.o $(CXXFLAGS)
+	g++ -g my_hello_world.o  -o librados_my_hello_world $(LDFLAGS)
+
 clean:
 	rm hello_world.o librados_hello_world
 	rm hello_world_c.o librados_hello_world_c
 	rm my_hello_radosstriper.o  my_hello_radosstriper
 	rm my_hello_radosstriper_aio.o  my_hello_radosstriper_aio
+	rm my_hello_world.o my_librados_hello_world
