Added needed libraries. Compiles now.

--- a/examples/librados/Makefile
+++ b/examples/librados/Makefile
@@ -1,8 +1,9 @@
 ceph_src = ../../src
 ceph_libs = $(ceph_src)/.libs
 CXXFLAGS=-std=c++11 -I$(ceph_src)/include  -I$(ceph_src)
-CFLAGS=-I$(ceph_src)/include
-LDFLAGS=-L/usr/lib64 -L/lib64 -L$(ceph_src) -L$(ceph_libs) -lrados -lradosstriper
+CFLAGS=-I$(ceph_src)/include -I$(ceph_src)
+LDFLAGS=-L/lib64 -L$(ceph_src) -L$(ceph_libs) -lrados -lradosstriper
+BOOST=-L/usr/lib64 -lboost_program_options-mt
 
 ceph_erasure_code_benchmark_LDADD =  \
         $(LIBOSD) $(LIBCOMMON) \
@@ -116,7 +117,12 @@ machine_threads: machine_threads.cc
 
 ceph_native_write_benchmark: ceph_native_write_benchmark.cc
 	g++ -g -c ceph_native_write_benchmark.cc  -o ceph_native_write_benchmark.o $(CXXFLAGS)
-	g++ -g ceph_native_write_benchmark.o  -o ceph_native_write_benchmark $(LDFLAGS)
+	g++ -g ceph_native_write_benchmark.o  -o ceph_native_write_benchmark $(LDFLAGS) $(BOOST) \
+           $(CEPH_GLOBAL)
+
+test: test.cc
+	g++ -g -c test.cc  -o test.o $(CXXFLAGS)
+	g++ -g test.o  -o test $(LDFLAGS) $(BOOST)
 
 clean:
 	rm hello_world.o librados_hello_world
