--- a/examples/librados/Makefile
+++ b/examples/librados/Makefile
@@ -45,7 +45,7 @@ am__append_29 = -lbz2
 LIBERASURE_CODE = $(ceph_libs)/liberasure_code.a
 
 all: aio_write_test_queue aio_read_test_queue rados_threaded_read_test rados_threaded_write_test \
- rados_threaded_ec_write_test machine_threads ceph_gibraltar_bench ceph_gibraltar_bench_threaded \
+machine_threads ceph_gibraltar_bench ceph_gibraltar_bench_threaded \
 ceph_gibraltar_bench_aio_read
 
 ceph_gibraltar_bench_aio_read: ceph_gibraltar_bench_aio_read.cc
